libpurple/wrapper/Conversation.cs


		/*
		 * GList * purple_conv_chat_get_ignored(PurpleConvChat * chat)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_conv_chat_get_ignored(IntPtr chat);

		public static GList ConvChatGetIgnored(PurpleConvChat chat)
		{
			throw new NotImplementedException();
		}

		/*
		 * char * purple_conv_chat_get_ignored_user(PurpleConvChat * chat, char * user)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_conv_chat_get_ignored_user(IntPtr chat, string user);

		public static string ConvChatGetIgnoredUser(PurpleConvChat chat, string user)
		{
			throw new NotImplementedException();
		}

		/*
		 * gboolean purple_conv_chat_is_user_ignored(PurpleConvChat * chat, char * user)
		 */
		[DllImport("libpurple.dll")]
		private static extern bool purple_conv_chat_is_user_ignored(IntPtr chat, string user);

		public static bool ConvChatIsUserIgnored(PurpleConvChat chat, string user)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conv_chat_set_topic(PurpleConvChat * chat, char * who, char * topic)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conv_chat_set_topic(IntPtr chat, string who, string topic);

		public static void ConvChatSetTopic(PurpleConvChat chat, string who, string topic)
		{
			throw new NotImplementedException();
		}

		/*
		 * char * purple_conv_chat_get_topic(PurpleConvChat * chat)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_conv_chat_get_topic(IntPtr chat);

		public static string ConvChatGetTopic(PurpleConvChat chat)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conv_chat_set_id(PurpleConvChat * chat, int id)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conv_chat_set_id(IntPtr chat, int id);

		public static void ConvChatSetId(PurpleConvChat chat, int id)
		{
			throw new NotImplementedException();
		}

		/*
		 * int purple_conv_chat_get_id(PurpleConvChat * chat)
		 */
		[DllImport("libpurple.dll")]
		private static extern int purple_conv_chat_get_id(IntPtr chat);

		public static int ConvChatGetId(PurpleConvChat chat)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conv_chat_write(PurpleConvChat * chat, char * who, char * message, PurpleMessageFlags flags, time_t mtime)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conv_chat_write(IntPtr chat, string who, string message, UNKNOWN flags, UNKNOWN mtime);

		public static void ConvChatWrite(PurpleConvChat chat, string who, string message, PurpleMessageFlags flags, time_t mtime)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conv_chat_send(PurpleConvChat * chat, char * message)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conv_chat_send(IntPtr chat, string message);

		public static void ConvChatSend(PurpleConvChat chat, string message)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conv_chat_send_with_flags(PurpleConvChat * chat, char * message, PurpleMessageFlags flags)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conv_chat_send_with_flags(IntPtr chat, string message, UNKNOWN flags);

		public static void ConvChatSendWithFlags(PurpleConvChat chat, string message, PurpleMessageFlags flags)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conv_chat_add_user(PurpleConvChat * chat, char * user, char * extra_msg, PurpleConvChatBuddyFlags flags, gboolean new_arrival)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conv_chat_add_user(IntPtr chat, string user, string extra_msg, UNKNOWN flags, bool new_arrival);

		public static void ConvChatAddUser(PurpleConvChat chat, string user, string extra_msg, PurpleConvChatBuddyFlags flags, bool new_arrival)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conv_chat_add_users(PurpleConvChat * chat, GList * users, GList * extra_msgs, GList * flags, gboolean new_arrivals)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conv_chat_add_users(IntPtr chat, IntPtr users, IntPtr extra_msgs, IntPtr flags, bool new_arrivals);

		public static void ConvChatAddUsers(PurpleConvChat chat, GList users, GList extra_msgs, GList flags, bool new_arrivals)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conv_chat_rename_user(PurpleConvChat * chat, char * old_user, char * new_user)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conv_chat_rename_user(IntPtr chat, string old_user, string new_user);

		public static void ConvChatRenameUser(PurpleConvChat chat, string old_user, string new_user)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conv_chat_remove_user(PurpleConvChat * chat, char * user, char * reason)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conv_chat_remove_user(IntPtr chat, string user, string reason);

		public static void ConvChatRemoveUser(PurpleConvChat chat, string user, string reason)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conv_chat_remove_users(PurpleConvChat * chat, GList * users, char * reason)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conv_chat_remove_users(IntPtr chat, IntPtr users, string reason);

		public static void ConvChatRemoveUsers(PurpleConvChat chat, GList users, string reason)
		{
			throw new NotImplementedException();
		}

		/*
		 * gboolean purple_conv_chat_find_user(PurpleConvChat * chat, char * user)
		 */
		[DllImport("libpurple.dll")]
		private static extern bool purple_conv_chat_find_user(IntPtr chat, string user);

		public static bool ConvChatFindUser(PurpleConvChat chat, string user)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conv_chat_user_set_flags(PurpleConvChat * chat, char * user, PurpleConvChatBuddyFlags flags)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conv_chat_user_set_flags(IntPtr chat, string user, UNKNOWN flags);

		public static void ConvChatUserSetFlags(PurpleConvChat chat, string user, PurpleConvChatBuddyFlags flags)
		{
			throw new NotImplementedException();
		}

		/*
		 * PurpleConvChatBuddyFlags purple_conv_chat_user_get_flags(PurpleConvChat * chat, char * user)
		 */
		[DllImport("libpurple.dll")]
		private static extern UNKNOWN purple_conv_chat_user_get_flags(IntPtr chat, string user);

		public static PurpleConvChatBuddyFlags ConvChatUserGetFlags(PurpleConvChat chat, string user)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conv_chat_clear_users(PurpleConvChat * chat)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conv_chat_clear_users(IntPtr chat);

		public static void ConvChatClearUsers(PurpleConvChat chat)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conv_chat_set_nick(PurpleConvChat * chat, char * nick)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conv_chat_set_nick(IntPtr chat, string nick);

		public static void ConvChatSetNick(PurpleConvChat chat, string nick)
		{
			throw new NotImplementedException();
		}

		/*
		 * char * purple_conv_chat_get_nick(PurpleConvChat * chat)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_conv_chat_get_nick(IntPtr chat);

		public static string ConvChatGetNick(PurpleConvChat chat)
		{
			throw new NotImplementedException();
		}

		/*
		 * PurpleConversation * purple_find_chat(PurpleConnection * gc, int id)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_find_chat(IntPtr gc, int id);

		public static PurpleConversation FindChat(PurpleConnection gc, int id)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conv_chat_left(PurpleConvChat * chat)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conv_chat_left(IntPtr chat);

		public static void ConvChatLeft(PurpleConvChat chat)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conv_chat_invite_user(PurpleConvChat * chat, char * user, char * message, gboolean confirm)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conv_chat_invite_user(IntPtr chat, string user, string message, bool confirm);

		public static void ConvChatInviteUser(PurpleConvChat chat, string user, string message, bool confirm)
		{
			throw new NotImplementedException();
		}

		/*
		 * gboolean purple_conv_chat_has_left(PurpleConvChat * chat)
		 */
		[DllImport("libpurple.dll")]
		private static extern bool purple_conv_chat_has_left(IntPtr chat);

		public static bool ConvChatHasLeft(PurpleConvChat chat)
		{
			throw new NotImplementedException();
		}

		/*
		 * PurpleConvChatBuddy * purple_conv_chat_cb_new(char * name, char * alias, PurpleConvChatBuddyFlags flags)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_conv_chat_cb_new(string name, string alias, UNKNOWN flags);

		public static PurpleConvChatBuddy ConvChatCbNew(string name, string alias, PurpleConvChatBuddyFlags flags)
		{
			throw new NotImplementedException();
		}

		/*
		 * PurpleConvChatBuddy * purple_conv_chat_cb_find(PurpleConvChat * chat, char * name)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_conv_chat_cb_find(IntPtr chat, string name);

		public static PurpleConvChatBuddy ConvChatCbFind(PurpleConvChat chat, string name)
		{
			throw new NotImplementedException();
		}

		/*
		 * char * purple_conv_chat_cb_get_name(PurpleConvChatBuddy * cb)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_conv_chat_cb_get_name(IntPtr cb);

		public static string ConvChatCbGetName(PurpleConvChatBuddy cb)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conv_chat_cb_destroy(PurpleConvChatBuddy * cb)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conv_chat_cb_destroy(IntPtr cb);

		public static void ConvChatCbDestroy(PurpleConvChatBuddy cb)
		{
			throw new NotImplementedException();
		}

		/*
		 * gboolean purple_conversation_do_command(PurpleConversation * conv, gchar * cmdline, gchar * markup, gchar ** error)
		 */
		[DllImport("libpurple.dll")]
		private static extern bool purple_conversation_do_command(IntPtr conv, string cmdline, string markup, IntPtr error);

		public static bool DoCommand(PurpleConversation conv, string cmdline, string markup, gchar error)
		{
			throw new NotImplementedException();
		}

		/*
		 * void * purple_conversations_get_handle()
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_conversations_get_handle();

		public static IntPtr ConversationsGetHandle()
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conversations_init()
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conversations_init();

		public static void ConversationsInit()
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conversations_uninit()
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conversations_uninit();

		public static void ConversationsUninit()
		{
			throw new NotImplementedException();
		}

	}
}

